fixed overall styling and spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,13 +40,9 @@ button:active{
   padding: 20px 10px;
   flex-wrap: wrap;
   gap:20px;
+
 }
-#loading-txt{
-  color:white;
-  opacity: 0.9;
-  margin-top: 10%;
-  margin-left: 30%;
-}
+
 
 @media screen and (max-width:1200px) {
   #cards{
